feat: get all request offers method added
